finished styling for aside elements, add media query, Aside elements shift to bottom,main elemts shrink to 100vh/100vw, footer media query needs to be fixed.

--- a/styles/main.css
+++ b/styles/main.css
@@ -9,19 +9,28 @@ html {
   box-sizing: inherit;
 }
 
+.nav-bar {
+  position: relative;
+  border-bottom: solid grey 1px;
+  top: 45px;
+}
 .nav-left {
   position: relative;
   font-size: 11.5px;
   left: 150px;
   word-spacing: 25px;
-  top: 20px;
+  top: -20px;
+}
+.nav-left a {
+  text-decoration: none;
+  list-style: none;
 }
 .nav-right {
   position: relative;
-  right: 120px;
+  right: 145px;
   word-spacing: 12px;
   font-size: 13px;
-  top: 20px;
+  top: -20px;
 }
 
 body {
@@ -143,7 +152,7 @@ article {
   position: absolute;
   border-radius: 50%;
   max-width: 55%;
-  height: 75%;
+  height: 70%;
 
   border: 8px solid rgb(246, 244, 244);
   left: 22%;
@@ -155,11 +164,17 @@ article {
 h2 {
   position: relative;
   top: 35%;
+  text-align: center;
+}
+#profile-aside p {
+  position: relative;
+  padding-right: 60px;
+  line-height: 25px;
 }
 
 .social-icons i {
   position: relative;
-  top: 40px;
+  top: 35px;
   color: grey;
   border-radius: 50%;
   height: 30px;
@@ -167,8 +182,9 @@ h2 {
   font-size: 12px;
   text-align: center;
   word-spacing: 15px;
-  border: 1px solid black;
-  padding: 0%;
+  border: 1px solid rgb(97, 96, 96);
+
+  padding: 7px;
   margin-top: 12%;
   margin-left: 6px;
   left: -7px;
@@ -178,22 +194,43 @@ h2 {
   position: relative;
   height: 25.5%;
   width: 56%;
-  top: 11.4%;
+  top: 11.7%;
   right: -35px;
   background-color: white;
-  border: solid grey 1px;
 }
 
 .popular-post img {
   position: relative;
-  width: 75%;
-  height: 70%;
-  left: 10%;
-  top: 15px;
+  width: 300px;
+  height: 200px;
+  left: 30px;
+  top: 20px;
 }
 .popular-post h2 {
-  top: -1%;
+  top: 10px;
   text-align: center;
+}
+.popular-post h3 {
+  position: relative;
+  top: 25px;
+  text-align: left;
+  font-size: 12px;
+  left: 30px;
+}
+.popular-post p {
+  position: relative;
+  top: 20px;
+  text-align: left;
+  left: 30px;
+}
+.post2 {
+  position: relative;
+  top: 25px;
+}
+
+.post3 {
+  position: relative;
+  top: 50px;
 }
 
 .latest-post img {
@@ -211,7 +248,72 @@ h2 {
   width: 57%;
   left: 40px;
   background-color: white;
-  border: solid grey 1px;
+}
+.latest-post h2 {
+  position: relative;
+  text-align: center;
+  font-size: 18px;
+  top: 12px;
+  font-family: oswald;
+  font-weight: light;
+}
+
+.latest-post h3 {
+  font-size: 12px;
+  text-align: center;
+}
+.latest-post p {
+  font-size: 12px;
+  text-align: center;
+}
+#img1 {
+  position: relative;
+  top: 30px;
+}
+#img2 {
+  top: -10px;
+}
+#img3 {
+  top: -50px;
+}
+#img4 {
+  top: -90px;
+}
+
+.LP1 h3,
+p {
+  position: relative;
+  left: 35px;
+  top: -60px;
+}
+
+.LP2 h3 {
+  position: relative;
+  left: 0px;
+  top: -100px;
+}
+.LP2 p {
+  position: relative;
+  top: -100px;
+  right: 35px;
+}
+.LP3 h3 {
+  position: relative;
+  left: 5px;
+  top: -140px;
+}
+.LP4 h3 {
+  position: relative;
+  left: 25px;
+  top: -180px;
+}
+.LP3 p {
+  top: -140px;
+}
+.LP4 p {
+  position: relative;
+  top: -180px;
+  right: 10px;
 }
 
 .instagram-feed {
@@ -221,7 +323,7 @@ h2 {
   grid-auto-flow: column;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 200px);
-  top: 12.4%;
+  top: 11.6%;
 
   left: 2%;
   align-items: flex-start;
@@ -232,7 +334,6 @@ h2 {
   padding: 50px;
   margin: 20px;
   background-color: white;
-  border: solid grey 1px;
 }
 .instagram-feed h2 {
   top: -33px;
@@ -259,7 +360,7 @@ h2 {
 .footer {
   position: relative;
 
-  bottom: -320px;
+  bottom: -250px;
   height: 245px;
   width: 15in;
   color: rgb(242, 239, 239);
@@ -299,4 +400,58 @@ h2 {
   font-family: oswald;
   font-weight: lighter;
   letter-spacing: 1px;
+}
+
+.number-buttons {
+  position: relative;
+  top: 90px;
+  left: 150px;
+  word-spacing: 1px;
+  font-family: lato;
+}
+.b1 {
+  background-color: orange;
+  color: white;
+  min-height: 35px;
+  min-width: 35px;
+  border: solid 1px black;
+}
+.b2 {
+  min-height: 35px;
+  min-width: 35px;
+  border: solid 1px black;
+}
+.b3 {
+  min-height: 35px;
+  min-width: 35px;
+  border: solid 1px black;
+}
+.b4 {
+  min-height: 35px;
+  min-width: 35px;
+  border: solid 1px black;
+}
+.b5 {
+  position: relative;
+  min-height: 35px;
+  min-width: 55px;
+  border: solid 1px black;
+  font-style: bold;
+}
+
+@media screen and (max-width: 768px) {
+  .wrapper {
+    flex-direction: column;
+
+    max-width: 70vh;
+    max-height: 70vh;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main article {
+    float: top;
+    max-width: 100vw;
+    max-height: 100vh;
+  }
 }
